fix: make panes scrollable (#14)
Sidebar panes can now be scrolled if the content inside is too long.

--- a/src/components/controls/Controls.module.scss
+++ b/src/components/controls/Controls.module.scss
@@ -131,8 +131,12 @@
 }
 
 .value {
+  overflow: hidden;
+  text-overflow: ellipsis;
+
   &::before {
     content: attr(data-value);
+    white-space: nowrap;
   }
 
   &[data-full]:hover::before {
