--- a/src/components/sidebar/Sidebar.module.scss
+++ b/src/components/sidebar/Sidebar.module.scss
@@ -6,6 +6,7 @@
   width: 100%;
   height: 100%;
   padding: 16px;
+  overflow-y: scroll;
 }
 
 .header {
