--- a/src/components/timeline/Timeline.module.scss
+++ b/src/components/timeline/Timeline.module.scss
@@ -16,21 +16,9 @@
 
 .timeline {
   overflow-x: auto;
-  overflow-y: auto;
+  overflow-y: hidden;
   flex-grow: 1;
   position: relative;
-
-  &::-webkit-scrollbar {
-    width: 16px;
-    height: 16px;
-    background-color: #242424;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background: rgba(255, 255, 255, 0.24);
-    border: 6px solid #242424;
-    border-radius: 8px;
-  }
 }
 
 .track {
